--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vapi-ai/web": "^2.3.5",
     "framer-motion": "^12.18.1",
     "ldrs": "^1.1.7",
+    "lucide-react": "^0.468.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-siriwave": "^3.1.0",
